# filecheckize

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  _version.py  pyproject.toml  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: publish.yml
.github/workflows/: ci-pyright-fails.yml  code-formatting.yml  dependabot.yml  publish.yml  tests.yml
filecheckize/: _version.py  filecheckize  main.py
tests/filecheck/: empty-lines.mlir  lit.cfg  mlir.mlir
