[build-system]
requires = ["setuptools>=42", "wheel"]

[tool.pyright]
reportImportCycles = false
enableTypeIgnoreComments = false
typeCheckingMode = "strict"
"include" = ["filecheckize"]
"ignore" = ["filecheckize/_version.py"]

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "W", "I", "UP", "PT"]
ignore = [
    "E741",  # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006", # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT007", # https://beta.ruff.rs/docs/rules/pytest-parametrize-values-wrong-type/
    "PT011", # https://beta.ruff.rs/docs/rules/pytest-raises-too-broad/
    "PT012", # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
    "PT015", # https://beta.ruff.rs/docs/rules/pytest-assert-always-false/
]
line-length = 300
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403"]
"versioneer.py" = ["ALL"]
"setup.py" = ["ALL"]

[tool.ruff.mccabe]
max-complexity = 10
