[build-system]
requires = ["setuptools>=42", "wheel"]

[tool.pyright]
reportImportCycles = false
enableTypeIgnoreComments = false
typeCheckingMode = "strict"
"include" = ["filecheckize"]
"ignore" = ["filecheckize/_version.py"]

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = ["E", "F", "W", "I", "UP", "PT"]
lint.ignore = [
    "E741",  # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006", # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT007", # https://beta.ruff.rs/docs/rules/pytest-parametrize-values-wrong-type/
    "PT011", # https://beta.ruff.rs/docs/rules/pytest-raises-too-broad/
    "PT012", # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
    "PT015", # https://beta.ruff.rs/docs/rules/pytest-assert-always-false/
]
line-length = 300
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"versioneer.py" = ["ALL"]
"_version.py" = ["ALL"]
"setup.py" = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.black]
# When updating this list, please update `.pre-commit-config.yaml`
exclude = """
/(__pycache__|.asv|\\.?venv|build|tests/filecheck)/
|versioneer.py$
|_version.py$
"""